--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -108,6 +108,32 @@
     cron_file: letsencrypt-renew
     user: root
 
+- name: Install maintenance backend config
+  copy:
+    dest: "{{ LOAD_BALANCER_CONF_DIR }}/01-maintenance"
+    content: |
+        backend be-maintenance-opencraft
+        server maintenance-page 127.0.0.1:{{ MAINTENANCE_SERVER_PORT }}
+
+- name: Ensure that {{ MAINTENANCE_SERVER_STATIC_ROOT }} exits
+  file:
+    path: "{{ MAINTENANCE_SERVER_STATIC_ROOT }}"
+    owner: www-data
+    group: www-data
+    state: directory
+
+- name: Remove default nginx config
+  file: path=/etc/nginx/sites-enabled/default state=absent
+
+- name: Copy Nginx site configuration
+  template: src=nginx-maintenance.conf dest=/etc/nginx/sites-available/maintenance
+
+- name: Enable Nginx config
+  file: src=/etc/nginx/sites-available/maintenance dest=/etc/nginx/sites-enabled/maintenance state=link
+
+- name: Install default maintenance page
+  copy: src=default-maintenance-page.html dest={{ MAINTENANCE_SERVER_STATIC_ROOT }}
+
 - name: open HTTP and HTTPS port on the firewall
   ufw:
     rule: allow
