--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -1,9 +1,10 @@
 server {
-    listen {{ MAINTENANCE_SERVER_PORT }};
+    listen 127.0.0.1:{{ MAINTENANCE_SERVER_PORT }};
+
+    root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
 
     location / {
-        alias {{ MAINTENANCE_SERVER_STATIC_ROOT }};
-        try_files $hostname.html default.html;
+        try_files /$hostname.html $uri /default.html;
         autoindex off;
         gzip on;
     }
