--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -3,9 +3,19 @@ server {
 
     root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
 
-    location / {
-        try_files /$hostname.html $uri /default.html;
-        autoindex off;
-        gzip on;
+    server_name _;
+
+    error_page 503 =503 @error;
+
+    location @error {
+        try_files /$host/index.html /index.html =503;
+    }
+
+    location ~ ^/maintenance/static/(.*)$ {
+        try_files /$host/static/$1 /static/$1;
+    }
+
+    location = /maintenance {
+        return 503;
     }
 }
