Removing possibly infinite 503 loop from try_files line.

--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -8,7 +8,7 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /index.html =503;
+        try_files /$host/index.html /index.html;
     }
 
     location ~ ^/maintenance/static/(.*)$ {
