Redirect /maintenance pages to the maintenance backend

--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -52,9 +52,11 @@ frontend fe_http
 
 frontend fe_https
     bind *:443 ssl crt {{ LOAD_BALANCER_CERTS_DIR }}
+    acl maintenance_mode path_beg /maintenance
     # X-Forwarded-For is added by "option forwardfor"
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request add-header X-Forwarded-Proto https
+    use_backend maintenance if maintenance_mode
     use_backend %[req.hdr(host),lower,map_dom({{ LOAD_BALANCER_BACKEND_MAP }})]
 
 backend be_acme_challenge
