Add errorloc dirctive to redirect to maintenance page

--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -52,6 +52,10 @@ frontend fe_http
 
 frontend fe_https
     bind *:443 ssl crt {{ LOAD_BALANCER_CERTS_DIR }}
+    errorloc 500 /maintenance
+    errorloc 502 /maintenance
+    errorloc 503 /maintenance
+    errorloc 504 /maintenance
     acl maintenance_mode path_beg /maintenance
     # X-Forwarded-For is added by "option forwardfor"
     http-request set-header X-Forwarded-Port %[dst_port]
