Add servers for scheduled and unscheduled maintenenace Add acl to redirect to /maintenance on 50x error codes

--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -52,6 +52,9 @@ frontend fe_http
 
 frontend fe_https
     bind *:443 ssl crt {{ LOAD_BALANCER_CERTS_DIR }}
+    acl fail_mode status 500
+    acl fail_mode status 502
+    acl fail_mode status 504
     errorloc 500 /maintenance
     errorloc 502 /maintenance
     errorloc 503 /maintenance
@@ -60,6 +63,7 @@ frontend fe_https
     # X-Forwarded-For is added by "option forwardfor"
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request add-header X-Forwarded-Proto https
+    http-response redirect location /maintenance if fail_mode
     use_backend maintenance if maintenance_mode
     use_backend %[req.hdr(host),lower,map_dom({{ LOAD_BALANCER_BACKEND_MAP }})]
 
