--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -19,3 +19,49 @@ server {
         return 503;
     }
 }
+
+server {
+    listen 127.0.0.1:{{ MAINTENANCE_SCHEDULED_SERVER_PORT }};
+
+    root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
+
+    server_name _;
+
+    error_page 503 =503 @error;
+
+    location @error {
+        try_files /$host/scheduled.html /$host/index.html /scheduled.html /index.html;
+    }
+
+    location ~ ^/maintenance/static/(.*)$ {
+        try_files /$host/static/$1 /static/$1;
+    }
+
+    location = /maintenance {
+        return 503;
+    }
+}
+
+
+server {
+    listen 127.0.0.1:{{ MAINTENANCE_UNSCHEDULED_SERVER_PORT }};
+
+    root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
+
+    server_name _;
+
+    error_page 503 =503 @error;
+
+    location @error {
+        try_files /$host/unscheduled.html /$host/index.html /unscheduled.html /index.html;
+    }
+
+    location ~ ^/maintenance/static/(.*)$ {
+        try_files /$host/static/$1 /static/$1;
+    }
+
+    location = /maintenance {
+        return 503;
+    }
+}
+
