--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -27,21 +27,14 @@ server {
 
     server_name _;
 
-    error_page 503 =503 @error;
-
-    location @error {
-        try_files /$host/scheduled.html /$host/index.html /scheduled.html /index.html;
-    }
-
     location ~ ^/maintenance/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
-    location = /maintenance {
-        return 503;
+    location / {
+        try_files /$host/scheduled.html /$host/index.html /scheduled.html /index.html;
     }
 }
-
 
 server {
     listen 127.0.0.1:{{ MAINTENANCE_UNSCHEDULED_SERVER_PORT }};
@@ -50,18 +43,12 @@ server {
 
     server_name _;
 
-    error_page 503 =503 @error;
-
-    location @error {
-        try_files /$host/unscheduled.html /$host/index.html /unscheduled.html /index.html;
-    }
-
     location ~ ^/maintenance/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
-    location = /maintenance {
-        return 503;
+    location / {
+        try_files /$host/unscheduled.html /$host/index.html /unscheduled.html /index.html;
     }
 }
 
