--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,5 +40,5 @@ LOAD_BALANCER_MANAGE_CERTS_INTERVAL: 5
 MAINTENANCE_SERVER_PORT: 8888
 MAINTENANCE_SCHEDULED_SERVER_PORT: "{{ MAINTENANCE_SERVER_PORT + 1 }}"
 MAINTENANCE_UNSCHEDULED_SERVER_PORT: "{{ MAINTENANCE_SERVER_PORT + 2 }}"
-MAINTENANCE_SERVER_STATIC_ROOT: /srv/maintenance/
+MAINTENANCE_SERVER_STATIC_ROOT: /var/www/maintenance
 MAINTENANCE_PAGES_REPO: "https://github.com/open-craft/maintenance-pages"
