Use "error" instead of maintenance for default error condition Move maintenance backends config to separate file Add comments to describe backend and frontend config Rearrange backends in proper order

--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -11,11 +11,11 @@ server {
         try_files /$host/index.html /index.html;
     }
 
-    location ~ ^/maintenance/static/(.*)$ {
+    location ~ ^/error/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
-    location = /maintenance {
+    location = /error {
         return 503;
     }
 }
@@ -27,7 +27,7 @@ server {
 
     server_name _;
 
-    location ~ ^/maintenance/static/(.*)$ {
+    location ~ ^/error/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
@@ -43,7 +43,7 @@ server {
 
     server_name _;
 
-    location ~ ^/maintenance/static/(.*)$ {
+    location ~ ^/error/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
