--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -109,17 +109,9 @@
     user: root
 
 - name: Install maintenance backend config
-  copy:
+  template:
+    src: haproxy-maintenance-backends.conf
     dest: "{{ LOAD_BALANCER_CONF_DIR }}/01-maintenance"
-    content: |
-        backend maintenance
-            server maintenance-page 127.0.0.1:{{ MAINTENANCE_SERVER_PORT }}
-
-        backend scheduled-maintenance
-            server scheduled-maintenance-page 127.0.0.1:{{ MAINTENANCE_SCHEDULED_SERVER_PORT }}
-
-        backend unscheduled-maintenance
-            server unscheduled-maintenance-page 127.0.0.1:{{ MAINTENANCE_UNSCHEDULED_SERVER_PORT }}
 
 - name: Ensure that {{ MAINTENANCE_SERVER_STATIC_ROOT }} exits
   file:
