--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -52,20 +52,25 @@ frontend fe_http
 
 frontend fe_https
     bind *:443 ssl crt {{ LOAD_BALANCER_CERTS_DIR }}
-    acl fail_mode status 500
-    acl fail_mode status 502
-    acl fail_mode status 504
-    errorloc 500 /maintenance
-    errorloc 502 /maintenance
-    errorloc 503 /maintenance
-    errorloc 504 /maintenance
-    acl maintenance_mode path_beg /maintenance
+    # Use the error backend if the path begins with /error
+    acl error_mode path_beg /error
+    use_backend error if error_mode
     # X-Forwarded-For is added by "option forwardfor"
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request add-header X-Forwarded-Proto https
-    http-response redirect location /maintenance if fail_mode
-    use_backend maintenance if maintenance_mode
+    # If the backend raises a 50x error redirect to /error so the error backend
+    # is used.
+    acl backend_fail status 500:502
+    acl backend_fail status 504:599
+    http-response redirect location /error if backend_fail
     use_backend %[req.hdr(host),lower,map_dom({{ LOAD_BALANCER_BACKEND_MAP }})]
+    # For errors raised by HAProxy redirect to /error so they will go to the
+    # error backend.
+    errorloc 500 /error
+    errorloc 502 /error
+    errorloc 503 /error
+    errorloc 504 /error
+
 
 backend be_acme_challenge
     server srv_lets_encrypt 127.0.0.1:8080
