Make all maintenance pages return error code Add custom header to error backend to prevent redirect loop

--- a/templates/haproxy.cfg
+++ b/templates/haproxy.cfg
@@ -60,9 +60,9 @@ frontend fe_https
     http-request add-header X-Forwarded-Proto https
     # If the backend raises a 50x error redirect to /error so the error backend
     # is used.
-    acl backend_fail status 500:502
-    acl backend_fail status 504:599
-    http-response redirect location /error if backend_fail
+    acl backend_fail status 500:599
+    acl error_backend res.hdr(X-Maintenance) yes
+    http-response redirect location /error if backend_fail !error_backend
     use_backend %[req.hdr(host),lower,map_dom({{ LOAD_BALANCER_BACKEND_MAP }})]
     # For errors raised by HAProxy redirect to /error so they will go to the
     # error backend.
