--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -1,6 +1,8 @@
 server {
     listen 127.0.0.1:{{ MAINTENANCE_SERVER_PORT }};
 
+    add_header X-Maintenance yes always;
+
     root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
 
     server_name _;
@@ -23,32 +25,48 @@ server {
 server {
     listen 127.0.0.1:{{ MAINTENANCE_SCHEDULED_SERVER_PORT }};
 
+    add_header X-Maintenance yes always;
+
     root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
 
     server_name _;
+
+    error_page 503 =503 @error;
+
+    location @error {
+        try_files /$host/index.html /index.html;
+    }
 
     location ~ ^/error/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
-    location / {
-        try_files /$host/scheduled.html /$host/index.html /scheduled.html /index.html;
+    location = / {
+        return 503;
     }
 }
 
 server {
     listen 127.0.0.1:{{ MAINTENANCE_UNSCHEDULED_SERVER_PORT }};
 
+    add_header X-Maintenance yes always;
+
     root {{ MAINTENANCE_SERVER_STATIC_ROOT }};
 
     server_name _;
+
+    error_page 503 =503 @error;
+
+    location @error {
+        try_files /$host/index.html /index.html;
+    }
 
     location ~ ^/error/static/(.*)$ {
         try_files /$host/static/$1 /static/$1;
     }
 
-    location / {
-        try_files /$host/unscheduled.html /$host/index.html /unscheduled.html /index.html;
+    location = / {
+        return 503;
     }
 }
 
