--- a/templates/haproxy-maintenance-backend.conf
+++ b/templates/haproxy-maintenance-backend.conf
@@ -8,7 +8,9 @@ backend error
 # or unscheduled maintenance. The instructions for how to activate them can be
 # found here: https://github.com/open-craft/documentation/blob/master/something_is_down.md
 backend scheduled-maintenance
+    http-response redirect location / unless { capture.req.uri / }
     server scheduled-maintenance-page 127.0.0.1:{{ MAINTENANCE_SCHEDULED_SERVER_PORT }}
 
 backend unscheduled-maintenance
+    http-response redirect location / unless { capture.req.uri / }
     server unscheduled-maintenance-page 127.0.0.1:{{ MAINTENANCE_UNSCHEDULED_SERVER_PORT }}
