--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -10,11 +10,11 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /index.html;
+        try_files /$host/index.html /default/index.html;
     }
 
     location ~ ^/error/static/(.*)$ {
-        try_files /$host/static/$1 /static/$1;
+        try_files /$host/static/$1 /default/static/$1;
     }
 
     location = /error {
@@ -34,11 +34,11 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /index.html;
+        try_files /$host/index.html /default/index.html;
     }
 
     location ~ ^/error/static/(.*)$ {
-        try_files /$host/static/$1 /static/$1;
+        try_files /$host/static/$1 /default/static/$1;
     }
 
     location = / {
@@ -58,11 +58,11 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /index.html;
+        try_files /$host/index.html /default/index.html;
     }
 
     location ~ ^/error/static/(.*)$ {
-        try_files /$host/static/$1 /static/$1;
+        try_files /$host/static/$1 /default/static/$1;
     }
 
     location = / {
