--- a/templates/nginx-maintenance.conf
+++ b/templates/nginx-maintenance.conf
@@ -10,7 +10,7 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /default/index.html;
+        try_files /$host/error.html /default/error.html;
     }
 
     location ~ ^/error/static/(.*)$ {
@@ -34,7 +34,7 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /default/index.html;
+        try_files /$host/error.html /default/error.html;
     }
 
     location ~ ^/error/static/(.*)$ {
@@ -58,7 +58,7 @@ server {
     error_page 503 =503 @error;
 
     location @error {
-        try_files /$host/index.html /default/index.html;
+        try_files /$host/error.html /default/error.html;
     }
 
     location ~ ^/error/static/(.*)$ {
