--- a/templates/haproxy-maintenance-backend.conf
+++ b/templates/haproxy-maintenance-backend.conf
@@ -14,3 +14,8 @@ backend scheduled-maintenance
 backend unscheduled-maintenance
     http-response redirect location / unless { capture.req.uri / }
     server unscheduled-maintenance-page 127.0.0.1:{{ MAINTENANCE_UNSCHEDULED_SERVER_PORT }}
+
+# This backend can be used when an instance is being provisioned
+backend provisioning
+    http-response redirect location / unless { capture.req.uri / }
+    server provisioning-page 127.0.0.1:{{ MAINTENANCE_PROVISIONING_SERVER_PORT }}
